--- a/src/css/side.css
+++ b/src/css/side.css
@@ -245,3 +245,72 @@
     }
   }
 } 
+
+@media (max-width: 400px) {
+  #sidebar {
+    position: fixed;
+    bottom: 0;
+    top: unset;
+    width: 100%;
+    height: 48px;
+    padding: 0;
+    border-right: none;
+    border-top: 1px solid var(--line-clr);
+    z-index: 1000;
+    > ul {
+      display: grid;
+      grid-auto-flow: column;
+      grid-auto-columns: 48px;
+      align-items: center;
+      overflow-x: auto;
+      padding: 0;
+    }
+
+    ul li {
+      height: 100%;
+    }
+
+    ul a,
+    ul .dropdown-btn {
+      width: 48px;
+      height: 48px;
+      padding: 0;
+      border-radius: 0;
+      justify-content: center;
+    }
+
+    ul li span,
+    ul li:first-child,
+    .dropdown-btn svg:last-child {
+      display: none;
+    }
+
+    ul li .sub-menu.show {
+      position: fixed;
+      bottom: 48px;
+      left: 0;
+      width: 100%;
+      height: 48px;
+      background-color: var(--hover-clr);
+      border-top: 1px solid var(--line-clr);
+      display: flex;
+      justify-content: center;
+      box-sizing: border-box;
+
+      > div {
+        overflow-x: auto;
+      }
+
+      li {
+        display: inline-flex;
+      }
+
+      a {
+        padding: 0.75em;
+        width: auto;
+        justify-content: center;
+        box-sizing: border-box;
+      }
+    }
+  }
+}
